--- a/class-2020-02-13.html
+++ b/class-2020-02-13.html
@@ -370,7 +370,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#pgnbbqyled .gt_table {
+#uvjlwzcspk .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -398,7 +398,7 @@ summary {
   /* table.border.bottom.color */
 }
 
-#pgnbbqyled .gt_heading {
+#uvjlwzcspk .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -417,7 +417,7 @@ summary {
   /* heading.border.lr.color */
 }
 
-#pgnbbqyled .gt_title {
+#uvjlwzcspk .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -431,7 +431,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#pgnbbqyled .gt_subtitle {
+#uvjlwzcspk .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -445,7 +445,7 @@ summary {
   border-top-width: 0;
 }
 
-#pgnbbqyled .gt_bottom_border {
+#uvjlwzcspk .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -454,7 +454,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#pgnbbqyled .gt_column_spanner {
+#uvjlwzcspk .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -462,7 +462,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#pgnbbqyled .gt_col_headings {
+#uvjlwzcspk .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -489,7 +489,7 @@ summary {
   /* column_labels.border.lr.color */
 }
 
-#pgnbbqyled .gt_col_heading {
+#uvjlwzcspk .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -505,11 +505,11 @@ summary {
   overflow-x: hidden;
 }
 
-#pgnbbqyled .gt_sep_right {
+#uvjlwzcspk .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#pgnbbqyled .gt_group_heading {
+#uvjlwzcspk .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -548,7 +548,7 @@ summary {
   vertical-align: middle;
 }
 
-#pgnbbqyled .gt_empty_group_heading {
+#uvjlwzcspk .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -572,20 +572,20 @@ summary {
   vertical-align: middle;
 }
 
-#pgnbbqyled .gt_striped {
+#uvjlwzcspk .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#pgnbbqyled .gt_from_md > :first-child {
+#uvjlwzcspk .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#pgnbbqyled .gt_from_md > :last-child {
+#uvjlwzcspk .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#pgnbbqyled .gt_row {
+#uvjlwzcspk .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -615,7 +615,7 @@ summary {
   overflow-x: hidden;
 }
 
-#pgnbbqyled .gt_stub {
+#uvjlwzcspk .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -632,7 +632,7 @@ summary {
   padding-left: 12px;
 }
 
-#pgnbbqyled .gt_summary_row {
+#uvjlwzcspk .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -646,7 +646,7 @@ summary {
   padding-right: 5px;
 }
 
-#pgnbbqyled .gt_first_summary_row {
+#uvjlwzcspk .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -661,7 +661,7 @@ summary {
   /* summary_row.border.color */
 }
 
-#pgnbbqyled .gt_grand_summary_row {
+#uvjlwzcspk .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -675,7 +675,7 @@ summary {
   padding-right: 5px;
 }
 
-#pgnbbqyled .gt_first_grand_summary_row {
+#uvjlwzcspk .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -690,7 +690,7 @@ summary {
   /* grand_summary_row.border.color */
 }
 
-#pgnbbqyled .gt_table_body {
+#uvjlwzcspk .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -705,7 +705,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#pgnbbqyled .gt_footnotes {
+#uvjlwzcspk .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -729,7 +729,7 @@ summary {
   /* footnotes.border.lr.color */
 }
 
-#pgnbbqyled .gt_footnote {
+#uvjlwzcspk .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -737,7 +737,7 @@ summary {
   /* footnotes.padding */
 }
 
-#pgnbbqyled .gt_sourcenotes {
+#uvjlwzcspk .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -761,48 +761,48 @@ summary {
   /* source_notes.border.lr.style */
 }
 
-#pgnbbqyled .gt_sourcenote {
+#uvjlwzcspk .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#pgnbbqyled .gt_left {
+#uvjlwzcspk .gt_left {
   text-align: left;
 }
 
-#pgnbbqyled .gt_center {
+#uvjlwzcspk .gt_center {
   text-align: center;
 }
 
-#pgnbbqyled .gt_right {
+#uvjlwzcspk .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#pgnbbqyled .gt_font_normal {
+#uvjlwzcspk .gt_font_normal {
   font-weight: normal;
 }
 
-#pgnbbqyled .gt_font_bold {
+#uvjlwzcspk .gt_font_bold {
   font-weight: bold;
 }
 
-#pgnbbqyled .gt_font_italic {
+#uvjlwzcspk .gt_font_italic {
   font-style: italic;
 }
 
-#pgnbbqyled .gt_super {
+#uvjlwzcspk .gt_super {
   font-size: 65%;
 }
 
-#pgnbbqyled .gt_footnote_marks {
+#uvjlwzcspk .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="pgnbbqyled" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="uvjlwzcspk" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="4" class="gt_heading gt_title gt_font_normal gt_center" style>Top Five Government Classes</th>
