--- a/class-2020-02-13.html
+++ b/class-2020-02-13.html
@@ -370,7 +370,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#uvjlwzcspk .gt_table {
+#nlsjpbvrhv .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -398,7 +398,7 @@ summary {
   /* table.border.bottom.color */
 }
 
-#uvjlwzcspk .gt_heading {
+#nlsjpbvrhv .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -417,7 +417,7 @@ summary {
   /* heading.border.lr.color */
 }
 
-#uvjlwzcspk .gt_title {
+#nlsjpbvrhv .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -431,7 +431,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#uvjlwzcspk .gt_subtitle {
+#nlsjpbvrhv .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -445,7 +445,7 @@ summary {
   border-top-width: 0;
 }
 
-#uvjlwzcspk .gt_bottom_border {
+#nlsjpbvrhv .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -454,7 +454,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#uvjlwzcspk .gt_column_spanner {
+#nlsjpbvrhv .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -462,7 +462,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#uvjlwzcspk .gt_col_headings {
+#nlsjpbvrhv .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -489,7 +489,7 @@ summary {
   /* column_labels.border.lr.color */
 }
 
-#uvjlwzcspk .gt_col_heading {
+#nlsjpbvrhv .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -505,11 +505,11 @@ summary {
   overflow-x: hidden;
 }
 
-#uvjlwzcspk .gt_sep_right {
+#nlsjpbvrhv .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#uvjlwzcspk .gt_group_heading {
+#nlsjpbvrhv .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -548,7 +548,7 @@ summary {
   vertical-align: middle;
 }
 
-#uvjlwzcspk .gt_empty_group_heading {
+#nlsjpbvrhv .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -572,20 +572,20 @@ summary {
   vertical-align: middle;
 }
 
-#uvjlwzcspk .gt_striped {
+#nlsjpbvrhv .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#uvjlwzcspk .gt_from_md > :first-child {
+#nlsjpbvrhv .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#uvjlwzcspk .gt_from_md > :last-child {
+#nlsjpbvrhv .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#uvjlwzcspk .gt_row {
+#nlsjpbvrhv .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -615,7 +615,7 @@ summary {
   overflow-x: hidden;
 }
 
-#uvjlwzcspk .gt_stub {
+#nlsjpbvrhv .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -632,7 +632,7 @@ summary {
   padding-left: 12px;
 }
 
-#uvjlwzcspk .gt_summary_row {
+#nlsjpbvrhv .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -646,7 +646,7 @@ summary {
   padding-right: 5px;
 }
 
-#uvjlwzcspk .gt_first_summary_row {
+#nlsjpbvrhv .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -661,7 +661,7 @@ summary {
   /* summary_row.border.color */
 }
 
-#uvjlwzcspk .gt_grand_summary_row {
+#nlsjpbvrhv .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -675,7 +675,7 @@ summary {
   padding-right: 5px;
 }
 
-#uvjlwzcspk .gt_first_grand_summary_row {
+#nlsjpbvrhv .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -690,7 +690,7 @@ summary {
   /* grand_summary_row.border.color */
 }
 
-#uvjlwzcspk .gt_table_body {
+#nlsjpbvrhv .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -705,7 +705,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#uvjlwzcspk .gt_footnotes {
+#nlsjpbvrhv .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -729,7 +729,7 @@ summary {
   /* footnotes.border.lr.color */
 }
 
-#uvjlwzcspk .gt_footnote {
+#nlsjpbvrhv .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -737,7 +737,7 @@ summary {
   /* footnotes.padding */
 }
 
-#uvjlwzcspk .gt_sourcenotes {
+#nlsjpbvrhv .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -761,48 +761,48 @@ summary {
   /* source_notes.border.lr.style */
 }
 
-#uvjlwzcspk .gt_sourcenote {
+#nlsjpbvrhv .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#uvjlwzcspk .gt_left {
+#nlsjpbvrhv .gt_left {
   text-align: left;
 }
 
-#uvjlwzcspk .gt_center {
+#nlsjpbvrhv .gt_center {
   text-align: center;
 }
 
-#uvjlwzcspk .gt_right {
+#nlsjpbvrhv .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#uvjlwzcspk .gt_font_normal {
+#nlsjpbvrhv .gt_font_normal {
   font-weight: normal;
 }
 
-#uvjlwzcspk .gt_font_bold {
+#nlsjpbvrhv .gt_font_bold {
   font-weight: bold;
 }
 
-#uvjlwzcspk .gt_font_italic {
+#nlsjpbvrhv .gt_font_italic {
   font-style: italic;
 }
 
-#uvjlwzcspk .gt_super {
+#nlsjpbvrhv .gt_super {
   font-size: 65%;
 }
 
-#uvjlwzcspk .gt_footnote_marks {
+#nlsjpbvrhv .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="uvjlwzcspk" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="nlsjpbvrhv" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="4" class="gt_heading gt_title gt_font_normal gt_center" style>Top Five Government Classes</th>
@@ -854,6 +854,21 @@ summary {
   
   
 </table></div>
+<pre><code>## # A tibble: 32 x 1
+##    mtcars$mpg  $cyl $disp   $hp $drat   $wt $qsec   $vs   $am $gear $carb
+##         &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##  1       21       6  160    110  3.9   2.62  16.5     0     1     4     4
+##  2       21       6  160    110  3.9   2.88  17.0     0     1     4     4
+##  3       22.8     4  108     93  3.85  2.32  18.6     1     1     4     1
+##  4       21.4     6  258    110  3.08  3.22  19.4     1     0     3     1
+##  5       18.7     8  360    175  3.15  3.44  17.0     0     0     3     2
+##  6       18.1     6  225    105  2.76  3.46  20.2     1     0     3     1
+##  7       14.3     8  360    245  3.21  3.57  15.8     0     0     3     4
+##  8       24.4     4  147.    62  3.69  3.19  20       1     0     4     2
+##  9       22.8     4  141.    95  3.92  3.15  22.9     1     0     4     2
+## 10       19.2     6  168.   123  3.92  3.44  18.3     1     0     4     4
+## # … with 22 more rows</code></pre>
+<pre><code>## [1] &quot;WHOA - your reprex is legendary!&quot;</code></pre>
 
 
 
